--- a/ServiceStation.Tests/ServiceStation.Tests.csproj
+++ b/ServiceStation.Tests/ServiceStation.Tests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{356597EA-4718-4B84-9F66-0E8D1F3284CC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SarviceStation.Tests</RootNamespace>
-    <AssemblyName>SarviceStation.Tests</AssemblyName>
+    <RootNamespace>ServiceStation.Tests</RootNamespace>
+    <AssemblyName>ServiceStation.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
