--- a/ServiceStation/ServiceStation.csproj
+++ b/ServiceStation/ServiceStation.csproj
@@ -13,8 +13,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SarviceStation</RootNamespace>
-    <AssemblyName>SarviceStation</AssemblyName>
+    <RootNamespace>ServiceStation</RootNamespace>
+    <AssemblyName>ServiceStation</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -191,6 +191,8 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ClientCardsController.cs" />
+    <Compile Include="Controllers\OrdersController.cs" />
+    <Compile Include="Controllers\RelatedCarsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -249,6 +251,16 @@
     <Content Include="Views\ClientCards\Details.cshtml" />
     <Content Include="Views\ClientCards\Edit.cshtml" />
     <Content Include="Views\ClientCards\Index.cshtml" />
+    <Content Include="Views\Orders\Create.cshtml" />
+    <Content Include="Views\Orders\Delete.cshtml" />
+    <Content Include="Views\Orders\Details.cshtml" />
+    <Content Include="Views\Orders\Edit.cshtml" />
+    <Content Include="Views\Orders\Index.cshtml" />
+    <Content Include="Views\RelatedCars\Create.cshtml" />
+    <Content Include="Views\RelatedCars\Delete.cshtml" />
+    <Content Include="Views\RelatedCars\Details.cshtml" />
+    <Content Include="Views\RelatedCars\Edit.cshtml" />
+    <Content Include="Views\RelatedCars\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
