--- a/ServiceStation.Domain/ServiceStation.Domain.csproj
+++ b/ServiceStation.Domain/ServiceStation.Domain.csproj
@@ -55,7 +55,8 @@
     <Compile Include="Concrete\OrderRepository.cs" />
     <Compile Include="Concrete\RelatedCarsRepository.cs" />
     <Compile Include="DAL\ServiceContext.cs" />
-    <Compile Include="InitializeTestData.cs" />
+    <Compile Include="InitializeData.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\ClientCard.cs" />
     <Compile Include="Model\Orders.cs" />
     <Compile Include="Model\RelatedCars.cs" />
