--- a/ServiceStation/Web.config
+++ b/ServiceStation/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="ServiceDbContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ServiceStation;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="ServiceDbContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ServiceStation;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -70,6 +70,11 @@
     </compilers>
   </system.codedom>
   <entityFramework>
+    <contexts>
+      <context type="ServiceStation.Domain.DAL.ServiceContext, ServiceStation.Domain">
+        <databaseInitializer type="ServiceStation.Domain.InitializeData, ServiceStation.Domain" />
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
