update before publishing

--- a/ServiceStation/Web.config
+++ b/ServiceStation/Web.config
@@ -13,6 +13,7 @@
   <connectionStrings>
     <!-- TODO: Replace the ****'s with the correct entries -->
     <add name="ServiceDbContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ServiceStation;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="ServiceDbContext" connectionString="Data Source=.\SQLEXPRESS;Database=ServiceStation;User Id = Makarevich; Password = q26s4hcxz2332Q!@;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
